<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.inti.student.randomfoodchoice.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_weight="3"
                android:inputType="text"
                android:id="@+id/input_fname"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/second_name"
                android:layout_weight="3"
                android:inputType="text"
                android:id="@+id/input_lname"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="left|center"
            android:id="@+id/input_gender">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/male"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:textSize="20dp"
                android:layout_weight="2"
                android:id="@+id/female"/>

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/input_age"
            android:inputType="number"
            android:layout_weight="1"
            android:id="@+id/input_age"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/input_username"
            android:inputType="text"
            android:layout_weight="1"
            android:id="@+id/input_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/input_email"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/input_password"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:id="@+id/input_pass" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/input_password2"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:id="@+id/input_repass" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:text="@string/btn_back"-->
            <!--android:id="@+id/back_btn"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:drawablePadding="3dp"
            android:text="@string/btn_reg"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:id="@+id/reg_btn"
            android:onClick="regBtn_click"
            android:background="@drawable/btn_primary" />

    </RelativeLayout>

</LinearLayout>
