<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.inti.student.randomfoodchoice.Login">

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="vertical">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableLeft="@mipmap/rfc_logo"-->
            <!--android:layout_weight="1"/>-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@mipmap/ic_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="28dp"
            android:textColor="#000"
            android:id="@+id/signIN"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/input_email"
            android:ems="10"
            android:id="@+id/input_email"
            android:drawableLeft="@mipmap/user_icon"
            android:drawablePadding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:ems="10"
            android:id="@+id/input_password"
            android:drawableLeft="@mipmap/pass_icon"
            android:drawablePadding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_login"
                android:id="@+id/login_btn"
                android:background="@drawable/btn_primary"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New User? Click here to "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_reg"
                android:id="@+id/reg_btn"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
